--- a/SemniarPI/SemniarPI.csproj
+++ b/SemniarPI/SemniarPI.csproj
@@ -126,6 +126,14 @@
   <ItemGroup>
     <None Include="Resources\PIexport.sql" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="searching.gif">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\searching.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.106.0\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.106.0\build\net46\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
