--- a/SemniarPI/SemniarPI.csproj
+++ b/SemniarPI/SemniarPI.csproj
@@ -134,6 +134,9 @@
   <ItemGroup>
     <None Include="bin\Debug\searching.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\searching.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.106.0\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.106.0\build\net46\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
